--- a/app/src/main/res/layout/activity_information.xml
+++ b/app/src/main/res/layout/activity_information.xml
@@ -3,15 +3,30 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:contentDescription="@string/scroll_view"
+    >
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="16dp"
         android:background="@android:color/white"
         tools:context=".common.InformationActivity">
+
+        <com.google.android.material.appbar.AppBarLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/gray"
+            >
+
+            <androidx.appcompat.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:background="@color/gray"/>
+
+        </com.google.android.material.appbar.AppBarLayout>
 
         <androidx.fragment.app.FragmentContainerView
             android:id="@+id/fragmentMap"
@@ -34,16 +49,18 @@
             android:id="@+id/txtContactAddress"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:padding="3dp"
+            android:textColor="#757575"
             android:textSize="16sp"
-            android:textColor="@android:color/darker_gray"
             tools:text="Contact Address" />
 
         <TextView
             android:id="@+id/txtContactDescription"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:padding="3dp"
+            android:textColor="#757575"
             android:textSize="16sp"
-            android:textColor="@android:color/darker_gray"
             tools:text="Contact Description" />
 
         <ImageButton
@@ -54,14 +71,21 @@
             android:background="?attr/selectableItemBackground"
             android:padding="8dp"
             android:src="@drawable/ic_routes"
-            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
+            android:contentDescription="@string/img_route"
+            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"
+            />
 
         <TextView
             android:id="@+id/txtContactNumber"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="16sp"
-            android:textColor="@android:color/darker_gray"
+            android:layout_gravity="center"
+            android:background="@color/gray"
+            android:padding="8dp"
+            android:textStyle="bold"
+            android:textColor="@android:color/white"
+            android:textSize="18sp"
+            tools:ignore="TextContrastCheck"
             tools:text="Contact Number" />
 
         <include
@@ -81,7 +105,8 @@
             android:tint="@android:color/white"
             app:fabSize="normal"
             app:srcCompat="@drawable/ic_call"
-            tools:ignore="SpeakableTextPresentCheck" />
+            tools:ignore="SpeakableTextPresentCheck"
+            android:contentDescription="@string/fab" />
 
     </LinearLayout>
 </ScrollView>
