--- a/app/src/main/res/layout/item_contact.xml
+++ b/app/src/main/res/layout/item_contact.xml
@@ -5,20 +5,19 @@
             name="contact"
             type="com.rn.sosnow.model.Contact" />
     </data>
-    <androidx.constraintlayout.widget.ConstraintLayout
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?attr/selectableItemBackground"
         android:padding="8dp">
+
         <ImageView
             android:id="@+id/imgCover"
             android:layout_width="200dp"
             android:layout_height="200dp"
             android:scaleType="centerInside"
-            app:imageUrl="@{contact.coverUrl}"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            android:contentDescription="@string/img_recycler"
+            app:imageUrl="@{contact.coverUrl}" />
+    </LinearLayout>
 </layout>
