--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorPrimary">#EA3838</color>
+    <color name="colorPrimaryDark">#A50015</color>
     <color name="colorAccent">#D81B60</color>
     <color name="light_gray">#D3D3D3</color>
-    <color name="black">#000</color>
-    <color name="red">#F00</color>
+    <color name="black">#000000</color>
+    <color name="red">#FF0000</color>
+    <color name="gray">#978C8C</color>
 </resources>
